# PREx

./: .env.example  .gitignore  LICENSE  README.md  context.md  decisions.md  pyproject.toml  research.md
docs/: wireframe-prompt.md
examples/outputs/: README.md
examples/outputs/pr-19654/: CONTRACT.md  brief.json  graph.json
examples/outputs/pr-19701/: CONTRACT.md  brief.json  graph.json
examples/outputs/pr-19858/: CONTRACT.md  brief.json  graph.json
examples/outputs/pr-19872/: CONTRACT.md  brief.json  graph.json  manifest.snapshot.yaml
prex/: __init__.py  agent.py  cli.py  server.py
prex-ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
prex-ui/src/: App.tsx  css.d.ts  main.tsx  tokens.css
prex-ui/src/a2gui/: A2Card.module.css  A2Card.tsx  BlastRadius.tsx  ChecklistCard.tsx  ClassDiff.tsx  CouplingMap.tsx  DataFlowChain.tsx  PlanCard.tsx  ReviewBriefCard.tsx  Sequence.tsx  Treemap.tsx  registerTools.tsx  schemas.ts
prex-ui/src/api/: client.ts  types.ts
prex-ui/src/components/: ChatShell.module.css  ChatShell.tsx  ChecklistColumn.module.css  ChecklistColumn.tsx  CitationLink.tsx  DiffColumn.module.css  Hero.tsx  (+5 more)
prex/_ui_dist/: index.html
prex/manifest/: __init__.py  contract_renderer.py  predicates.py
prex/parser/: __init__.py  _brief.py  _brief_llm.py  _diff.py  _emit.py  _enrich.py  _external.py  _pr.py  _signals.py  _stackgraphs.py  _treesitter.py  parse.py
prex/schemas/: __init__.py  _shared.py  brief.py  gen.py  graph.py  graph.schema.json
ui/: package.json
ui/scripts/: check-env.sh
(+81 files in other folders)
