[project]
name = "prex"
version = "0.1.0"
description = "PR review reimagined: diff impact graph generator"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6,<3",
  "tree-sitter>=0.23,<0.26",
  "tree-sitter-python>=0.23,<0.26",
  "click>=8.1",
  "litellm>=1.50",
  "google-cloud-aiplatform>=1.60",
  "pyyaml>=6.0",
]

[project.scripts]
prex = "prex.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["prex*"]

[tool.setuptools.package-data]
prex = ["_ui_dist/**/*", "schemas/dist/*.json"]
